# openslate-project-server

./: auth.py  database.py  main.py  pyproject.toml
routers/: chats.py  files.py  projects.py  users.py
